# rustcompile

./: .build-test-2  .buildpacks  .gitignore  .test-build-final  .test-commit  .trigger-test  BACKEND_COMPONENTS.md  CLOUD_RUN_DEPLOYMENT.md  CLOUD_RUN_SETUP.md  DEPLOYMENT.md  MINIMAL_APP_SUMMARY.md  MINIMAL_TEST_APP_INSTRUCTIONS.md  README.md  cloudbuild.yaml
backend/: .gitignore  Cargo.toml  Dockerfile  startserver.sh  stopserver.sh
backend/src/: main.rs
frontend/: index.html
